--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
-  <>
+  <head>
     <meta charset="utf-8" />
     <link rel="icon" type="logo.png" href="src/imgs/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -22,7 +22,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@400;700&family=Cairo:wght@300;400;700&family=League+Spartan:wght@400;700&display=swap" rel="stylesheet">
-</head>
     <title>Movies</title>
   </head>
   <body>
