--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,10 @@
 <html lang="ar" dir="rtl">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="logo.png" href="src/imgs/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="Movies app"/>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--link of bootstrap-->
     <link
